# Logging-plus-plus

./: CMakeLists.txt  LogHandler.cpp  LogHandler.hpp  LogStream.hpp  LogStrem.cpp  Logger.cpp  Logger.hpp  LoggingLib.hpp  Makefile  README.md  lib.hpp  logger.cpp  logger.hpp  test.cpp
include/: CMakeLists.txt  LogHandler.hpp  LogStream.hpp  Logger.hpp  LoggingLib.hpp  helper.h  log_handler.h  log_stream.h  logger.h
lib/: CMakeLists.txt  LogHandler.cpp  LogStream.cpp  log_handler.cc  log_stream.cc
test/: CMakeLists.txt  benchmark.cc  benchmark.cpp  installTest.cpp  main.cpp  main.cpp~  unittest.cc  unittest.cpp
