PROJECT(LOGGER)
CMAKE_MINIMUM_REQUIRED(VERSION 3.2)
set(CMAKE_C_COMPILER /usr/bin/clang)
set(CMAKE_CXX_COMPILER /usr/bin/clang++)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -pthread -std=c++14")
add_subdirectory(lib)
add_subdirectory(include)
add_subdirectory(test)
enable_testing()
add_test(NAME test COMMAND test/unittest)
